2001-09-15  Yves Kurz <kurzy1@isbiel.ch>

	* infoview.c: Changed the frame alignment to default.
	* interface.c: ditto
	* procdialogs.c: ditto

2001-09-14  Kevin Vandersloot <kfv101@psu.edu>

	Add a command line argument to run procman in a simple view.
	This would be suitable for a ctrl-alt-delete dialog.

	* procman.c: add new config option for the simple view. Don't save
	settings if set. Also fix suitable defaults. Add command args
	to show the dialog

	* interface.c: do a gnome_dialog if in simple view.

	* callbacks.c: New function to logout, but does nothing yet.
	Check to see if timeouts exist before removing them at app
	exit.

	* proctable.c: load a different spec file if in simple view

	* simple.etspec: new spec file. Headers are not shown so this doesn't
	need to be translated.

	* infovew.c: don't make the hbox uniform so the info frame can
	expand a little

2001-09-09  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: fix misspelling of e_utf8 function

	* release 0.10.2

2001-09-08  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c:fix memory leaks when calling get_process_name
	a second time. Also do the utf8 stuff when adding "thread" to the
	name

	* util.c: fix memory leaks

2001-09-08  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: provide feedback when password is wrong. Just
	put up a simple error message

	* util.c (su_run_with_password): pass the return value from
	exec_su
	(exec_su): return -1 if password is wrong.

	* interface.c: cosmetic improvements, put % in the graph
	titles to make explicit that it is the % that is being
	displayed

2001-09-06  Kevin Vandersloot <kfv101@psu.edu>

	* favorites.c: add a little padding around the "remove from
	list" button label.

	* interface.c: add 'end process' and 'kill process' to main menu.
	Put the hidden process manager into the settings menu.

	* callbacks.c (cb_[kill,end]_process): new callbacks for the new
	menuitems.

2001-09-06  Kevin Vandersloot <kfv101@psu.edu>
