@@ -1,3 +1,14 @@
+2001-09-16  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.c: add new variable desktop_load_finish to monitor
+	the delay loading. Call pthrea_init here and do pthread_join
+	when the loading is done.
+
+	* prettytable.c: just load the .desktop files in the thread
+	function
+
+	* interface.c: change "end app..." to "close app..."
+
 2001-09-15  Yves Kurz <kurzy1@isbiel.ch>
 
 	* infoview.c: Changed the frame alignment to default.
